# reactos

base/services/audiosrv/: services.c
base/services/umpnpmgr/: precomp.h  rpcserver.c
boot/bootdata/: hivesys.inf  txtsetup.sif
dll/cpl/mmsys/: mmsys.c
dll/cpl/powercfg/: powermeter.c  resource.h
dll/cpl/powercfg/lang/: en-US.rc
dll/directx/ksuser/: ksuser.h
dll/win32/: CMakeLists.txt
dll/win32/avrt/: CMakeLists.txt  avrt.c
dll/win32/kernel32/: kernel32.spec
dll/win32/kernel32/kernel32_vista/: CMakeLists.txt
dll/win32/streamci/: streamci.c
dll/win32/wdmaud.drv/: legacy.c  mmixer.c
drivers/ksfilter/: CMakeLists.txt
drivers/ksfilter/ks/: api.c  connectivity.c  irp.c  property.c  swenum.c  topology.c
drivers/usb/: CMakeLists.txt
drivers/usb/usbehci/: usbehci.c
drivers/wdm/audio/backpln/portcls/: adapter.cpp  filter_topology.cpp  (+11 more)
drivers/wdm/audio/hdaudbus/: fdo.cpp  hdaudbus.h
drivers/wdm/audio/hdaudbus_new/: adsp.cpp  adsp.h  buspdo.h  driver.h  fdo.cpp  fdo.h  hdac_controller.cpp  hdac_controller.h  hdac_stream.cpp  hdaudio.cpp  nhlt.cpp  sklhdaudbus.cpp  sklhdaudbus.sln  sof-tplg.cpp
drivers/wdm/audio/sysaudio/: deviface.c  main.c
media/inf/: audio.inf  wdmaudio.inf
ntoskrnl/: ntos.cmake  ntoskrnl.spec
ntoskrnl/include/internal/i386/: ke.h
ntoskrnl/io/iomgr/: util.c
ntoskrnl/ke/i386/: cpu.c  traphdlr.c
ntoskrnl/mm/ARM3/: expool.c
ntoskrnl/po/: power.c
ntoskrnl/rtl/: misc.c
ntoskrnl/se/: accesschk.c
ntoskrnl/wmi/: etw.c
sdk/cmake/: msvc.cmake
sdk/include/ddk/: hdaudio.h
sdk/include/psdk/: ks.h  ksmedia.h
(+12 files in other folders)
